--- a/style.css
+++ b/style.css
@@ -6,21 +6,25 @@ a:visited {
   }
   
   /* mouse over link */
-  a:hover {
+a:hover {
     color: red;
   }
   
   /* selected link */
-  a:active {
-    color: blue;
+a:active {
+  color: blue;
   }
-  #pokemon-info{
+#pokemonarray{
+  height: 1800px; /* Đặt kích thước của phần tử cha */
+  overflow: auto; /* Hiển thị thanh cuộn khi cần thiết */
+}
+#pokemon-info{
     float: right;
-    
+    height: 100% !important;
   }
-  .selected-pokemon {
-    border: 2px solid blue; /* Màu khung bao, bạn có thể thay đổi màu sắc tùy ý */
-    border-radius: 5px; /* Độ cong góc của khung bao */
+.selected-pokemon {
+    border: 2px solid blue; 
+    border-radius: 5px; 
 }
 ul {
   list-style-type: none;
@@ -31,5 +35,5 @@ ul {
 }
 
 .enlarge-image:hover {
-  transform: scale(1.3); /* Phóng to ảnh khi hover */
+  transform: scale(1.2); /* Phóng to ảnh khi hover */
 }
