--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #pokemonarray{
@@ -9,7 +10,7 @@ body {
 #pokemon-info{
     float: right;
     height: 100% !important ;
-    overflow: initial;
+    overflow: initial !important;
   }
 
 .selected-pokemon {
